--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ember-cli-deploy-aws-codedeploy",
-  "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "version": "0.0.1",
+  "description": "AWS Code Deploy plugin for Ember CLI",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -11,12 +11,14 @@
     "start": "ember server",
     "test": "ember try:testall"
   },
-  "repository": "",
   "engines": {
     "node": ">= 0.10.0"
   },
   "author": "",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/MojoJojo/ember-cli-deploy-aws-codedeploy/issues"
+  },
   "devDependencies": {
     "broccoli-asset-rev": "^2.2.0",
     "ember-cli": "1.13.13",
@@ -42,10 +44,23 @@
     "ember-cli-deploy-plugin"
   ],
   "dependencies": {
+    "aws-sdk": "^2.2.26",
+    "core-object": "^1.1.0",
     "ember-cli-babel": "^5.1.5",
-    "ember-cli-deploy-plugin": "^0.2.0"
+    "ember-cli-deploy-plugin": "^0.2.0",
+    "mkdirp": "^0.5.1"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
+  },
+  "maintainers": [
+    {
+      "name": "Mojojojo",
+      "email": "sanket.sharma@dukstra.com"
+    }
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MojoJojo/ember-cli-deploy-aws-codedeploy.git"
   }
 }
